--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "eating-cpp/eating-cpp.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "个人主页照片2.jpg"
+  avatar           : "个人主页照片.jpg"
   name             : "YuJie Li"
   pronouns         : # example: "she/her"  
   bio              : "Do what should"
