--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default"
 title                    : "Yujie Li"
 title_separator          : "-"
 name                     : &name "YuJie Li"
-description              : &description "personal description"
+description              : &description "Work hard! Play hard!"
 url                      : https://eating-cpp.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "eating-cpp/eating-cpp.github.io"
